--- a/src/Assignment-1/assignment1.css
+++ b/src/Assignment-1/assignment1.css
@@ -5,3 +5,23 @@
 width: 100%;
 height: 100%;
 }
+.row{
+    width: 100%;
+    display: block;
+    border: 1px solid;
+    margin: 5px;
+}
+.col{
+    width: 35%;
+    display: inline-block;
+    margin: 30px;
+    height: 100%;
+}
+.img{
+    width: 300px;
+    height: 100px;
+
+}
+.list{
+    margin-top: -100px;
+}
